# SPDX-FileCopyrightText: 2025 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "mimi-room-policy"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
ciborium = "0.2.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.12"
tls_codec = { version = "0.4.1", features = ["derive", "serde", "mls"] }
